force-app/main/default/objects/Calendar_Dates__c.object
<CustomObject>
    <fields>
        <fullName>CalendarId__c</fullName>
        <label>Calendar ID</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Calendar Dates</relationshipLabel>
        <relationshipName>Calendar_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Calendar_Code__c</fullName>
        <label>Calendar Code</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Date_Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Calendar Date Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_Sequence_Nbr__c</fullName>
        <label>Date Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Type_Description__c</fullName>
        <label>Date Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <label>Calendar Date</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CalendarId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Date Type Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>